--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <img src="./logo.png" alt="Logo" class="center-logo" />
+  <img src="./logo1.1.png" alt="Logo" class="center-logo" />
 
   <article id="wrap">
     <article id="lightings">
