--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <img src="./logo1.1.png" alt="Logo" class="center-logo" />
+  <img src="./logo.png" alt="Logo" class="center-logo" />
 
   <article id="wrap">
     <article id="lightings">
@@ -33,8 +33,8 @@
 
   <!-- Footer -->
   <footer class="footer-message">
-    <p>© Knotbridge — All rights reserved.</p>
-    <p>We are coming — and the world will not be the same.</p>
+    <p>R'NQ™ — All rights reserved.</p>
+    <p>We set the fire under your business ass.</p>
   </footer>
 
   <!-- Audio element -->
