--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KnotBridge - One knot, Infinite Bridges</title>
+  <title>R'NQ™ - Work in Progress</title>
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
   <!-- Footer -->
   <footer class="footer-message">
     <p>R'NQ™ — All rights reserved.</p>
-    <p>We set the fire under your business ass.</p>
+    <p>The project is in development, we are ready soon.</p>
   </footer>
 
   <!-- Audio element -->
